# otvine

./: CMakeLists.txt  README.rst
.ci_support/: run_docker_linux.sh  run_docker_mingw.sh
.github/workflows/: build.yml
cmake/: otvineConfig.cmake.in
distro/debian/: changelog  control  rules
distro/rpm/: otvine.spec
distro/windows/: README.txt  installer.nsi
lib/include/: CMakeLists.txt
lib/include/otvine/: otvine.hxx  otvineprivate.hxx
lib/src/: CMakeLists.txt  RotatedCopula.cxx  VineCopula.cxx  VineCopulaFactory.cxx
lib/src/otvine/: RotatedCopula.hxx  VineCopula.hxx  VineCopulaFactory.hxx
lib/test/: CMakeLists.txt  t_VineCopulaFactory_std.cxx
python/doc/: conf.py.in
python/doc/examples/: plot_example1.py
python/doc/themes/openturns/: layout.html
python/doc/user_manual/: user_manual.rst
python/src/: CMakeLists.txt  RotatedCopula.i  RotatedCopula_doc.i  VineCopula.i  VineCopulaFactory_doc.i  VineCopulaFactory_doc.i.in  VineCopula_doc.i  __init__.py  otvine_module.i
python/test/: CMakeLists.txt  t_RotatedCopula_std.py  t_VineCopulaFactory_std.py  t_docstring.py
